# ccc_miner

./: README.md  environment.yml  pyproject.toml  requirements.txt
ccc_miner/: __init__.py  ccc_miner.py  data_analysis.py  plot_settings.py  ps.py  sps.py
data/: find_WS_optics.py
data/sequence_files/: SPS_2021_Protons_Q26_matched_with_RF.json  SPS_WS_optics.json  SPS_WS_optics_ions.json  SPS_WS_optics_protons_Q26.json
tests/: test_sps_fbct.py  test_sps_ws.py  test_sps_ws_q_gaussian.py
